[gd_scene load_steps=12 format=3 uid="uid://b6a58a38vbcny"]

[ext_resource type="Script" path="res://Scipts/sample_scene.gd" id="1_c64tg"]
[ext_resource type="Texture2D" uid="uid://cyr8mug5judu1" path="res://Assets/Art/Tiles.png" id="1_vqtk4"]
[ext_resource type="Texture2D" uid="uid://ixm7mgu0715" path="res://Assets/Art/path.png" id="3_mj5qd"]
[ext_resource type="Texture2D" uid="uid://bg073lp3hi4o8" path="res://Assets/Art/snake.png" id="5_7qoip"]
[ext_resource type="Script" path="res://Scipts/snake.gd" id="5_21h22"]
[ext_resource type="Script" path="res://Scipts/label.gd" id="6_kqgic"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t1j73"]
texture = ExtResource("1_vqtk4")
1:0/0 = 0
1:0/0/custom_data_0 = "floor"
2:0/0 = 0
0:1/0 = 0
0:1/0/custom_data_0 = "wall"
1:1/0 = 0
1:1/0/custom_data_0 = "wall"
2:1/0 = 0
0:0/0 = 0
0:0/0/custom_data_0 = "wall"

[sub_resource type="TileSet" id="TileSet_jnxj7"]
custom_data_layer_0/name = "tile_type"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_t1j73")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w8nvx"]
texture = ExtResource("3_mj5qd")
0:0/0 = 0
0:0/0/custom_data_0 = "path"

[sub_resource type="TileSet" id="TileSet_25gql"]
custom_data_layer_0/name = "tile_type"
custom_data_layer_0/type = 4
sources/1 = SubResource("TileSetAtlasSource_w8nvx")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_maui1"]
size = Vector2(14, 14)

[node name="World" type="Node2D"]
script = ExtResource("1_c64tg")

[node name="GameMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jnxj7")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(131073, 0, 0, 131075, 0, 0, 196609, 65536, 0, 131074, 0, 0, 262147, 0, 0, 262146, 0, 0, 262145, 65536, 0, 65540, 65536, 0, 131076, 0, 0, 262148, 0, 0, 65537, 65536, 0, 65538, 65536, 0, 65539, 65536, 0, 327681, 65536, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 65541, 65536, 0, 131077, 0, 0, 262149, 0, 0, 327685, 0, 0, 65542, 65536, 0, 131078, 0, 0, 262150, 0, 0, 327686, 0, 0, 65543, 65536, 0, 131079, 0, 0, 262151, 0, 0, 327687, 0, 0, 65544, 65536, 0, 131080, 0, 0, 262152, 0, 0, 327688, 0, 0, 65545, 65536, 0, 131081, 0, 0, 262153, 0, 0, 327689, 0, 0, 393217, 65536, 0, 458753, 65536, 0, 524289, 65536, 0, 589825, 65536, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 65536, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 65536, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 65536, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 65536, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 65536, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 65536, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 65536, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 65536, 0, 65546, 65536, 0, 131082, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 65536, 0, 65547, 65536, 0, 131083, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 65536, 0, 65548, 65536, 0, 131084, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 65536, 0, 65549, 65536, 0, 131085, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 65536, 0, 65550, 65536, 0, 131086, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 65536, 0, 65551, 65536, 0, 131087, 0, 0, 262159, 65536, 0, 327695, 65536, 0, 393231, 65536, 0, 458767, 65536, 0, 524303, 0, 0, 65552, 65536, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 65536, 0, 65553, 65536, 0, 131089, 65536, 0, 196625, 65536, 0, 262161, 65536, 0, 327697, 65536, 0, 393233, 65536, 0, 458769, 65536, 0, 524305, 65536, 0, 589841, 65536, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 196623, 65536, 0, 196622, 65536, 0, 196621, 65536, 0, 196620, 65536, 0, 196619, 65536, 0, 196618, 65536, 0, 196617, 65536, 0, 196616, 65536, 0, 196615, 65536, 0, 196614, 65536, 0, 196613, 65536, 0, 196612, 65536, 0, 196611, 65536, 0, 196610, 65536, 0, 589839, 65536, 0, 18, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 589843, 0, 0, 524307, 0, 0, 458771, 0, 0, 393235, 0, 0, 327699, 0, 0, 262163, 0, 0, 196627, 0, 0, 131091, 0, 0, 65555, 0, 0, 19, 0, 0, 18, 0, 0, 17, 0, 0, 16, 0, 0, 15, 0, 0, 14, 0, 0, 13, 0, 0, 5, 0, 0, 4, 0, 0, 3, 0, 0, 2, 0, 0, 1, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 131073, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 524304, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 131087, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131088, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0)
layer_2/name = "Apple"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Snake"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = false
layer_3/y_sort_origin = 0
layer_3/z_index = 0
layer_3/tile_data = PackedInt32Array()

[node name="Path" type="TileMap" parent="."]
tile_set = SubResource("TileSet_25gql")
format = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 80)
offset = Vector2(0, 8)
zoom = Vector2(1, 1.02)

[node name="Snake" type="Area2D" parent="."]
position = Vector2(248, 72)
script = ExtResource("5_21h22")
metadata/_edit_group_ = true

[node name="Head" type="CollisionShape2D" parent="Snake"]
shape = SubResource("RectangleShape2D_maui1")
metadata/_edit_group_ = true

[node name="Head" type="Sprite2D" parent="Snake/Head"]
texture = ExtResource("5_7qoip")
hframes = 5
frame = 3

[node name="Body" type="Area2D" parent="."]
position = Vector2(248, 88)
metadata/_edit_group_ = true

[node name="Body" type="CollisionShape2D" parent="Body"]
shape = SubResource("RectangleShape2D_maui1")
metadata/_edit_group_ = true

[node name="Body" type="Sprite2D" parent="Body/Body"]
texture = ExtResource("5_7qoip")
hframes = 5

[node name="Body1" type="Area2D" parent="."]
position = Vector2(248, 104)
metadata/_edit_group_ = true

[node name="Body" type="CollisionShape2D" parent="Body1"]
shape = SubResource("RectangleShape2D_maui1")
metadata/_edit_group_ = true

[node name="Body" type="Sprite2D" parent="Body1/Body"]
texture = ExtResource("5_7qoip")
hframes = 5

[node name="Body2" type="Area2D" parent="."]
position = Vector2(248, 120)
metadata/_edit_group_ = true

[node name="Body" type="CollisionShape2D" parent="Body2"]
shape = SubResource("RectangleShape2D_maui1")
metadata/_edit_group_ = true

[node name="Body" type="Sprite2D" parent="Body2/Body"]
texture = ExtResource("5_7qoip")
hframes = 5

[node name="Label" type="Label" parent="."]
offset_right = 320.0
offset_bottom = 176.0
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
script = ExtResource("6_kqgic")

[connection signal="grid_update" from="." to="Snake" method="_on_world_grid_update"]
[connection signal="path_finded" from="." to="Snake" method="_on_world_path_finded"]
[connection signal="victory" from="." to="Label" method="_on_world_victory"]
[connection signal="change_grid" from="Snake" to="." method="_on_snake_change_grid"]
[connection signal="killApple" from="Snake" to="." method="_on_snake_kill_apple"]
